<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
...
    <string name="record_audio_permission_denied_message">AnyMemo could not get permission to record audio.</string>
    <string name="write_storage_permission_denied_message">AnyMemo could not get permission to write db file on external storage.</string>
    <string name="db_file_is_corrupted_text">DB file is corrupted</string>
    <string name="clear_text">Clear</string>
    <string name="change_directory_permission_denied_message">AnyMemo could not get permission to change to the directory.</string>
    <string name="directory_empty_text">(Empty directory)</string>
    <string name="more_text">MORE</string>
    <string name="dropbox_item_description">Date: %1$s&lt;br&gt;Size: %2$d bytes</string>
    <string name="locale_esperanto_text">Esperanto</string>
    <string name="google_sign_in_not_successful_error_text">Google sign in is not successful</string>
    <string name="google_sign_in_empty_error_text">Google sign in result is empty</string>
    <string name="google_sign_in_account_empty_result">Unable to get Google account</string>
    <string name="show_hint">Show hint</string>
...
    <string name="spell_hint">Type out the answer</string>
    <string name="add_to_study_mode">Add to study mode</string>
    <string name="spell_hint_btn_text">Verify answer</string>
    <string name="workout_text">Workout Mode</string>

    <string name="spell_test">Type out the answer</string>
    <string name="add_to_workout_mode">Add to workout</string>
    <string name="add_to_workout_mode_message">By adding this deck to workout mode, you will be able
        to study a number of cards every day .</string>
    <string name="add_start_date">Add start date</string>
    <string name="add_start_date_message">""</string>
    <string name="add_number_of_days">Add number of days</string>
    <string name="add_number_of_days_message">Add number of days</string>
    <string name="enable_notification">Notify me for my next workout</string>
    <string name="number_days_button">Select number of days</string>
    <string name="number_cards_button">Select number of cards</string>
...
