<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FF5534"
            android:gravity="center"
            android:tag="Bottom3"
            android:weightSum="10">



            <ImageView
                android:id="@+id/trash"
                android:layout_width="27dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/delete" />



            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="Delete Item?"
                android:textColor="#fff"
                android:textSize="17sp" />



            <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="#ffffff"
                android:text="Yes,Delete"
                android:textColor="#FF5534" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="5dp"
            android:padding="10dp">


        </LinearLayout>
    </com.daimajia.swipe.SwipeLayout>

            <RelativeLayout
                android:id="@+id/button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                >

                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/triangle"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <com.github.aakira.expandablelayout.ExpandableLinearLayout
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:orientation="vertical"
                app:ael_duration="400"
                app:ael_expanded="false"
                >

                <TextView
                    android:id="@+id/insideView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:padding="@dimen/margin_normal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <Button
                    android:id="@+id/start_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="START WORKOUT!"/>

            </com.github.aakira.expandablelayout.ExpandableLinearLayout>


</RelativeLayout>